{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 73,
  "lineage": "b1ff7183-8ecc-aaad-06d5-0aedb843acf3",
  "resources": [
    {
      "module": "module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.116.218.15",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-09-09T13:37:36.326-07:00",
            "id": "projects/core-337701/regions/europe-central2/addresses/aqahh7607-bastion",
            "name": "aqahh7607-bastion",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "core-337701",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/europe-central2/addresses/aqahh7607-bastion",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/core-337701/zones/europe-central2-a/instances/aqahh7607-bastion"
            ]
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20220905",
                    "size": 32,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/europe-central2-a/disks/aqahh7607-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "desired_status": "RUNNING",
            "enable_display": false,
            "id": "projects/core-337701/zones/europe-central2-a/instances/aqahh7607-bastion",
            "instance_id": "6040994856467570034",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-highcpu-2",
            "metadata_fingerprint": "Y7EuSgG9t_c=",
            "name": "aqahh7607-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.116.218.15",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aqahh7607-network",
                "network_ip": "10.0.10.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/europe-central2/subnetworks/aqahh7607-bastion",
                "subnetwork_project": "core-337701"
              }
            ],
            "project": "core-337701",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/zones/europe-central2-a/instances/aqahh7607-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "all",
              "bastion"
            ],
            "tags_fingerprint": "Ky1HmRXoc_U=",
            "zone": "europe-central2-a"
          },
          "dependencies": [
            "module.aaa_cluster_aaa.data.google_compute_zones.available",
            "module.aaa_cluster_aaa.google_compute_address.bastion",
            "module.aaa_cluster_aaa.google_compute_network.network",
            "module.aaa_cluster_aaa.google_compute_subnetwork.bastion",
            "module.aaa_cluster_aaa.random_shuffle.google_compute_zones",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/core-337701/global/networks/aqahh7607-network",
            "mtu": 0,
            "name": "aqahh7607-network",
            "project": "core-337701",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aqahh7607-network"
          },
          "dependencies": [
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-09T13:18:15.833-07:00",
            "gateway_address": "10.0.10.1",
            "id": "projects/core-337701/regions/europe-central2/subnetworks/aqahh7607-bastion",
            "ip_cidr_range": "10.0.10.0/24",
            "name": "aqahh7607-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aqahh7607-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-337701",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/europe-central2/subnetworks/aqahh7607-bastion",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.aaa_cluster_aaa.google_compute_network.network",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-09-09T13:18:15.326-07:00",
            "gateway_address": "10.0.20.1",
            "id": "projects/core-337701/regions/europe-central2/subnetworks/aqahh7607-seemscloud",
            "ip_cidr_range": "10.0.20.0/24",
            "name": "aqahh7607-seemscloud",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aqahh7607-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "core-337701",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.52.0.0/14",
                "range_name": "cluster-range"
              },
              {
                "ip_cidr_range": "10.42.0.0/18",
                "range_name": "service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/regions/europe-central2/subnetworks/aqahh7607-seemscloud",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.aaa_cluster_aaa.google_compute_network.network",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_to_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-09T13:49:45.818-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/core-337701/global/firewalls/bastion-to-all",
            "log_config": [],
            "name": "bastion-to-all",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aqahh7607-network",
            "priority": 1000,
            "project": "core-337701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/global/firewalls/bastion-to-all",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "all"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aaa_cluster_aaa.google_compute_network.network",
            "random_string.random"
          ]
        }
      ]
    },
    {
      "module": "module.firewall.module.aaa_cluster_aaa",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internet_to_aaa_interface_aaa",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-09-09T13:49:45.487-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/core-337701/global/firewalls/internet-to-bastion",
            "log_config": [],
            "name": "internet-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/core-337701/global/networks/aqahh7607-network",
            "priority": 1000,
            "project": "core-337701",
            "self_link": "https://www.googleapis.com/compute/v1/projects/core-337701/global/firewalls/internet-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aaa_cluster_aaa.google_compute_network.network",
            "random_string.random"
          ]
        }
      ]
    }
  ]
}